--- a/src/components/Reports/SRReport/style.css
+++ b/src/components/Reports/SRReport/style.css
@@ -144,7 +144,7 @@
   font-size: 10pt;
 }
 
-.pr-general-container{
+.pr-general-container {
   padding-left: 10px;
   padding-right: 10px;
   padding-top: 8px;
@@ -152,26 +152,26 @@
   min-height: 100px;
 }
 
-.pr-container{
+.pr-container {
   margin-top: 7px;
 }
-.pr-spinner{
+.pr-spinner {
   float: left;
   margin-top: 3px;
 }
-.pr-label{
+.pr-label {
   width: 10%;
   float: left;
   margin-left: 4px;
 }
 
-.pr-bar{
+.pr-bar {
   width: 87%;
   margin-top: 3px;
   float: left;
 }
 
-.pr-status-node{
+.pr-status-node {
   width: 100%;
   display: flexbox;
   margin-top: 5px;
@@ -179,26 +179,111 @@
   background-color: rgb(223, 223, 223);
 }
 
-.pr-status-label{
+.pr-status-label {
   float: left;
   min-width: 25%;
 }
-.pr-status-bar{
+.pr-status-bar {
   float: left;
   width: 75%;
 }
-.pr-status-msg{
+.pr-status-msg {
   width: 100%;
   font-style: italic;
   color: gray;
 }
 
-.dr-container{
-  float: left;
-  background-color: rgb(237, 241, 237);
-  max-width: 400px;
+.dr-container {
+  min-width: 350px;
+  max-width: 50%;
+  margin: 4px !important;
+  border-left: solid black 1px !important;
 }
 
-.dr-entity{
+.dr-entity-header {
+  padding: 5px;
+  padding-left: 7px;
+  padding-right: 7px;
+  font-size: 10pt;
+}
 
+.dr-entity-name {
+  font-weight: bold;
+}
+.dr-entity-type {
+  font-style: italic;
+}
+.dr-entity-disp {
+  font-style: italic;
+  float: right;
+}
+.dr-ponderacion {
+  width: 20px;
+  float: left;
+  margin-top: 0px;
+  margin-right: 7px;
+}
+.dr-utr-group {
+  padding: 0px;
+  margin: 1px;
+}
+.dr-utr-body {
+  padding: 4px;
+  margin: 2px;
+  font-size: 10pt;
+  min-width: 200px;
+  max-width: 49%;
+  background-color: rgba(221, 240, 186, 0.486);
+}
+.dr-utr-bar {
+  max-width: 20px;
+  height: 7px;
+  margin-right: 5px;
+  margin-top: 7px;
+  float: left;
+}
+
+.dr-subtitle {
+  min-width: 200px;
+  max-width: 50%;
+}
+
+.dr-utr-label{
+  max-width: 75%;
+  color: #069;
+  font-size: 9pt;
+  font-style: italic;
+  text-decoration: underline;
+  font-weight: bolder;
+  float: left;
+  padding: 0px !important;
+  word-break: break-all !important;
+  cursor: pointer;
+}
+
+.dr-utr-disp{
+  float: right;
+  max-width: 25%;
+  
+}
+
+.dr-utr-description{
+  min-width: 75%;
+  float: left;
+}
+
+.dr-styled-input{
+  height: 32px;
+  width: 200px;
+  border-radius: 3px;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  border: 1px solid #e5e5e5;
+  padding: 0 32px 0 16px;
+}
+
+.dr-styled-input:hover{
+  cursor: pointer;
 }
