--- a/src/components/SideBars/css/main.css
+++ b/src/components/SideBars/css/main.css
@@ -696,6 +696,7 @@ body {
   color: #828282;
   padding-left: 12px;
   padding-top: 15px !important;
+  padding-bottom: 7px !important;
   font-size: 8pt;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
