--- a/src/Pages/sCentral/styles.css
+++ b/src/Pages/sCentral/styles.css
@@ -1,5 +1,5 @@
 .srd-diagram { 
-    height: 500px; 
+    min-height: 500px; 
     width: 100%; 
     background: rgba(90, 90, 90, 0.596);
 }
@@ -12,4 +12,14 @@
 
 .content-shift{
     margin-top: 60px;
+    height: calc(100% - 64px);
+}
+
+.grid{
+    height: 90%;
+}
+
+.logger{
+    height: 10%;
+    background-color:rgb(39, 40, 34);
 }
