--- a/src/Pages/sCentral/Modeling/NodeModels/BlockNode/BlockNodeStyle.css
+++ b/src/Pages/sCentral/Modeling/NodeModels/BlockNode/BlockNodeStyle.css
@@ -1,151 +1,243 @@
-.sr-port{
-    margin-top: 4px;
-    min-width: 12px;
-    height: 16px;
-    z-index: 10;
-    border-top-left-radius: 6px;
-    border-bottom-left-radius: 6px;
-    cursor: pointer;
-    float: right;
-    margin-left: 2px;
+.sr-port {
+  margin-top: 4px;
+  min-width: 12px;
+  height: 16px;
+  z-index: 10;
+  border-top-left-radius: 6px;
+  border-bottom-left-radius: 6px;
+  cursor: pointer;
+  float: right;
+  margin-left: 2px;
 }
-.sr-port-connect{
-    max-width: 100px;
-    width: fit-content;
-    float: right;
+.out-serial-port {
+  height: 24px;
+  float: right;
+  cursor: pointer;
+  width: 80px;
+}
+.out-serial-port:hover{
+  background-color: rgb(37, 112, 182);
+
 }
 
-.disconnect{
-    background: rgba(83, 83, 85, 0.781);
+.in-port{
+  height: 24px;
+  float: left;
+  cursor: pointer;
+  width: 80px;
+}
+.in-port:hover{
+  background-color:  rgb(37, 112, 182);
 }
 
-.connect{
-    background: rgba(135, 218, 135, 0.281);
+
+.disconnect {
+  background: rgba(83, 83, 85, 0.781);
+}
+
+.connect {
+  background: rgba(135, 218, 135, 0.281);
 }
 
 .sr-port:hover {
-    background: rgba(167, 89, 16, 0.753);
+  background: rgba(167, 89, 16, 0.753);
 }
 
-.sr-port-block{
-    margin-left: 4px;
-    min-width: 200px;
-    font-size: 11pt;
-    font-family: Courier, monospace !important;
+.sr-port-block {
+  margin-left: 4px;
+  min-width: 200px;
+  font-size: 11pt;
+  font-family: Courier, monospace !important;
 }
 
-.sr-port-label{
-    max-width: 80px;
+.sr-port-label {
+  max-width: 80px;
 }
 
-.sr-block-tipo{
-    background-color: rgba(158, 145, 145, 0.534);
-    padding: 2%;
-    font-size: 9pt;
+.sr-block-tipo {
+  background-color: rgba(158, 145, 145, 0.534);
+  padding: 2%;
+  font-size: 9pt;
 }
 
-.sr-node{
-    box-sizing: border-box;
-    white-space: nowrap;
-    pointer-events: all;
-    background-color: hsla(192, 20%, 95%, 0.705);
-    color: white;
-    border-radius: 1px;
-    border: black solid 1px;
-    max-width: 100%;
+.sr-node {
+  box-sizing: border-box;
+  white-space: nowrap;
+  pointer-events: all;
+  background-color: hsla(192, 60%, 74%, 0.705);
+  color: white;
+  border-radius: 1px;
+  border: black solid 1px;
+  min-width: 200px;
 }
 
-.sr-node-title{
-    background: rgba(2, 2, 2, 0.671); 
-    text-align: left;
-    max-width: 250px;
+.sr-node-title {
+  background: rgba(2, 2, 2, 0.671);
+  text-align: left;
+  min-width: 150px;
+  max-width: 160px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  font-size: 10pt;
+  padding: 3px;
 }
-.sr-node-subtitle{
-    background: rgba(0,0,0,0.3);
-    text-align: left;
-    font-weight: bolder;
-    font-size:10pt;
-    color: rgb(250, 246, 246);
-    border: black solid 0px;
-    padding: 1px;
-}
-
-.sr-input{
-    background-color: transparent;
-    border: 0;
-    color: white;
-    font-weight: bolder;
-    padding: 4px;
-    font-size: 12pt;
-    max-width: 120px;
+.sr-node-title:hover {
+  overflow: visible;
+  white-space: pre-line;
 }
 
-.btn-save{
-    margin-right: 2px;
-    float: right;
-    max-height: 48px;
-   min-width: 48px;
-   padding: 2px;
+.sr-input {
+  background-color: transparent;
+  border: 0;
+  color: white;
+  font-weight: bolder;
+  padding: 4px;
+  font-size: 12pt;
+  max-width: 120px;
 }
 
-.btn-active{
-   cursor: allowed;
-   pointer-events: all;
-   background-color: rgba(69, 163, 50, 0.678);
-}
-.btn-active:hover{
-    background-color: rgba(11, 88, 151, 0.664);
-}
-
-.btn-disabled{
-    cursor: not-allowed;
-    pointer-events: none;
-    background-color: rgba(55, 56, 49, 0.753);
+.btn-save {
+  margin-right: 2px;
+  float: right;
+  max-height: 48px;
+  min-width: 48px;
+  padding: 2px;
 }
 
-.to-drag{
-    height: 6px;
-   background-color: rgb(2, 35, 54) ;
+.btn-active {
+  cursor: allowed;
+  pointer-events: all;
+  background-color: rgba(69, 163, 50, 0.678);
+}
+.btn-active:hover {
+  background-color: rgba(11, 88, 151, 0.664);
 }
 
-.btn-delete{
-    margin-right: 2px;
-    margin-top: -1px;
-    max-height: 22px;
-   max-width: 20px;
-   padding: 1px;
-   background-color: transparent;
-   border:0;
-   color: rgba(247, 140, 113, 0.753);
+.btn-disabled {
+  cursor: not-allowed;
+  pointer-events: none;
+  background-color: rgba(55, 56, 49, 0.753);
 }
 
-.btn-delete:hover{
-    color: red;
-    background-color: transparent;
+.to-drag {
+  height: 6px;
+  background-color: rgb(2, 35, 54);
 }
 
-.icon-off{
-    height: 22px;
-    margin-top: 0px;
-    color: rgb(245, 248, 245);
-    padding-top: 0;
-    cursor: pointer;
-    float: right;
+.btn-delete {
+  margin-right: 2px;
+  margin-top: -1px;
+  max-height: 22px;
+  max-width: 20px;
+  padding: 1px;
+  background-color: transparent;
+  border: 0;
+  color: rgba(247, 140, 113, 0.753);
 }
 
-.icon-on{
-    height: 22px;
-    margin-top: 0px;
-    color: rgb(245, 248, 245);
-    padding-top: 0;
-    cursor: pointer;
-    float: right;
+.btn-delete:hover {
+  color: red;
+  background-color: transparent;
 }
 
-.chk-entity{
-    margin: 1px;
-    max-height: 20px;
-    display: inline-block;
-    text-align: center; 
-    vertical-align: middle
+.icon-off {
+  height: 25px;
+  margin-top: 0px;
+  color: rgb(7, 77, 15);
+  padding-top: 0;
+  cursor: pointer;
+  float: right;
+}
+
+.icon-on {
+  height: 25px;
+  margin-top: 0px;
+  color: rgb(17, 17, 17);
+  padding-top: 0;
+  cursor: pointer;
+  float: right;
+}
+
+.chk-entity {
+  margin: 1px;
+  max-height: 20px;
+  display: inline-block;
+  text-align: center;
+  vertical-align: middle;
+}
+
+.BtnContainer {
+  position: absolute;
+  right: 3px;
+  top: 3px;
+}
+
+.widget-add {
+  background-color: rgba(69, 163, 50, 0.678);
+  min-width: 210px;
+  margin-top: 4px;
+  border-color: rgba(83, 83, 85, 0.781);
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-weight: 900;
+}
+
+.widget-delete {
+  background-color: rgba(169, 28, 12, 0.926);
+  min-width: 22px;
+  border-color: rgba(83, 83, 85, 0.781);
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-weight: 900;
+}
+
+.left-port {
+  float: left;
+  width: 20%;
+}
+
+.right-port {
+  float: right;
+  width: 20%;
+}
+.widget-port{
+  height: 20px;
+}
+
+.SerialOutPort{
+  height: 20px;
+  width: 20px;
+  float: right;
+  background-color: rgb(56, 54, 48);
+  border-radius: 50%;
+  margin-top: 3px;
+}
+
+.InPort{
+  height: 18px;
+  width: 18px;
+  float: left;
+  background-color: rgb(56, 54, 48);
+  border-radius: 50%;
+  margin-top: 3px;
+}
+
+.Port-Container{
+  height: 24px;
+  margin: 2px;
+}
+
+.ParallelPort{
+  float: right;
+  height: 20px;
+  width: 20px;
+  background-color: rgb(56, 54, 48);
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.ParallelLabel{
+  float: left;
+  width: 150px;
+  overflow: hidden;
+  height: 20px;
 }
