--- a/src/Pages/sCentral/Modeling/NodeModels/BlockNode/BlockNodeStyle.css
+++ b/src/Pages/sCentral/Modeling/NodeModels/BlockNode/BlockNodeStyle.css
@@ -82,10 +82,7 @@
   font-size: 10pt;
   padding: 3px;
 }
-.sr-node-title:hover {
-  overflow: visible;
-  white-space: pre-line;
-}
+
 
 .sr-input {
   background-color: transparent;
@@ -183,9 +180,9 @@
 }
 
 .widget-delete {
-  background-color: rgba(169, 28, 12, 0.926);
+  background-color: rgba(194, 72, 58, 0.926);
   min-width: 22px;
-  border-color: rgba(83, 83, 85, 0.781);
+  border-color: rgba(126, 6, 6, 0.781);
   font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
   font-weight: 900;
 }
@@ -233,11 +230,12 @@
   background-color: rgb(56, 54, 48);
   border-radius: 50%;
   cursor: pointer;
+  margin-top: 2px;
 }
 
 .ParallelLabel{
   float: left;
-  width: 150px;
+  width: 160px;
   overflow: hidden;
   height: 20px;
 }
