--- a/src/Pages/sCentral/Modeling/NodeModels/BlockNode/BlockNodeStyle.css
+++ b/src/Pages/sCentral/Modeling/NodeModels/BlockNode/BlockNodeStyle.css
@@ -13,7 +13,7 @@
   height: 24px;
   float: right;
   cursor: pointer;
-  min-width: 90px;
+  width: 92px;
 }
 .out-serial-port:hover{
   background-color: rgb(37, 112, 182);
