--- a/src/Pages/sCentral/Modeling/NodeModels/WeightedNode/WeightedNodeStyle.css
+++ b/src/Pages/sCentral/Modeling/NodeModels/WeightedNode/WeightedNodeStyle.css
@@ -29,3 +29,25 @@
   border: black solid 1px;
   width: 200px;
 }
+
+.input-style{
+  background-color: rgba(128, 126, 130, 0.248);
+  color: white;
+  border: thin;
+  margin-left: 10px;
+  width: 90%;
+  text-align: center;
+  z-index: 1000;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
