--- a/src/components/DatePicker/style.css
+++ b/src/components/DatePicker/style.css
@@ -1,26 +1,26 @@
-.div_middle{
-    width: 50%;
-    min-width: 8px;
-    margin-left: 1px;
-    float: left;
-}
 
-.picker-div{
-    max-width: 125px;
-}
+
 
 .div-pick-container{
-    width: auto;
-}
-
-.div-pick-timer-container{
-    display: inline-flex;
+    display: flex !important;
+    flex-wrap: wrap !important;
+    justify-content: space-between !important;
 }
 .div_pick-timer-middle{
     float: left;
 }
 
-.picker-timer-div{
-    min-width: 140px;
-    float: left;
+.picker-timer-div-right{
+    min-width: 200px !important;
+    align-self: flex-end !important;
+    background-color: brown;
+}
+
+.picker-timer-div-left{
+    min-width: 200px !important;
+    align-self: flex-start !important;
+}
+
+.pick-size{
+    min-width: 200px !important;
 }
